--- a/FrontEnd/src/app/componentes/login/login.component.html
+++ b/FrontEnd/src/app/componentes/login/login.component.html
@@ -22,7 +22,7 @@
                 <input type="checkbox" value="remember-me" > Recordarme
               </label>
           </div>
-            <button class="btn ov-btn-slide-close btn-primary" type="submit" style="width: 100%;"><a  style="font-family: cursive;">Ingresar</a></button>
+            <button class="btn ov-btn-slide-close btn-primary text-center" type="submit" style="width: 100%;"><a  style="font-family: cursive;">Ingresar</a></button>
         </form>
           <!-- <button class="w-100 btn btn-lg btn-primary text-center" type="submit">Ingresar</button> -->
            <p class="mt-3 mb-2 text-white text-center" style="font-family: cursive;"><a href="#" target="_blank" class="nav-link">¿Olvido su contraseña?</a></p>
