--- a/FrontEnd/src/app/componentes/educacion/editeducacion.component.html
+++ b/FrontEnd/src/app/componentes/educacion/editeducacion.component.html
@@ -1,20 +1,27 @@
-<div class="row" *ngIf="educacion">
-  <div>
-    <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
-      <div class="form-group">
-        <label for="nombreE">Nombre de la Institucino</label>
-        <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="educacion.nombreE" required>
+<body class="card mb-3">
+   <main class="form-signin m-auto">
+       <img class="" src="/assets/logosPI/argprograma.png" alt="" id="logoLogin">
+      <div class="row" *ngIf="educacion">
+          <div class="row">
+
+               <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
+                  <div class="form-group">
+                    <label for="nombreE" class="text-white">Nombre de la Institucino</label>
+                       <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="educacion.nombreE" required>
+                  </div>
+                  <div class="form-group">
+                        <label for="descripcionE" class="text-white">Descripcion de sus estudios</label>
+                         <textarea type="text" rows="5" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="educacion.descripcionE" required></textarea>
+                  </div>
+                        <br>
+                      <button  class="btn ov-btn-slide-close btn-primary" style="width: 100%;">
+                        ACTUALIZAR
+                      </button>
+               </form>
+          </div>
       </div>
-      <div class="form-group">
-        <label for="descripcionE">Descripcion de sus estudios</label>
-        <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="educacion.descripcionE" required>
-      </div>
-      <button class="btn btn-primary">
-        Agregar educacion
-      </button>
-    </form>
-  </div>
-</div>
+   </main>
+</body>
 
 
 
