--- a/FrontEnd/src/app/componentes/educacion/neweducacion.component.html
+++ b/FrontEnd/src/app/componentes/educacion/neweducacion.component.html
@@ -1,20 +1,27 @@
-<div class="container">
+<body class="card mb-3">
+<main class="form-signin m-auto">
+  <img class="" src="/assets/logosPI/argprograma.png" alt="" id="logoLogin">
+
+  <div class="container">
   <div class="row">
     <div>
       <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
         <div class="form-group">
-          <label for="nombreE">Nombre de la Institucino</label>
+          <label for="nombreE" class="text-white">Nombre de la Institucion</label>
           <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="nombreE" required>
         </div>
         <div class="form-group">
-          <label for="descripcionE">Descripcion de sus estudios</label>
-          <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="descripcionE" required>
+          <label for="descripcionE" class="text-white">Descripcion de sus estudios</label>
+          <textarea rows="5"  type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="descripcionE" required></textarea>
         </div>
-        <button class="btn btn-primary">
-          Agregar educacion
+        <br>
+        <button  class="btn ov-btn-slide-close btn-primary" style="width: 100%;">
+          AGREGAR
         </button>
       </form>
     </div>
   </div>
 </div>
+</main>
+</body>
 
