--- a/FrontEnd/src/app/componentes/experiencia/edit-experiencia/edit-experiencia.component.html
+++ b/FrontEnd/src/app/componentes/experiencia/edit-experiencia/edit-experiencia.component.html
@@ -1,20 +1,25 @@
+<body class="card mb-3">
+<main class="form-signin m-auto">
+  <img class="" src="/assets/logosPI/argprograma.png" alt="" id="logoLogin">
 <div class="container" *ngIf="expLab">
    <div class="row">
     <div>
        <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
        <div class="form-group">
-           <label for="nombreE">Nombre de la empresa</label>
+           <label for="nombreE"  class="text-white">Nombre de la empresa</label>
            <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="expLab.nombreE" required>
        </div>
        <div class="form-group">
-            <label for="descripcionE">Descripcion de la tarea</label>
-            <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="expLab.descripcionE" required>
+            <label for="descripcionE"  class="text-white">Descripcion de la tarea</label>
+            <textarea  rows="5" type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="expLab.descripcionE" required></textarea>
        </div>
-            <button class="btn btn-primary">
-                   Actualizara
+            <br>
+            <button  class="btn ov-btn-slide-close btn-primary" style="width: 100%;">
+                   ACTUALIZAR
             </button>
        </form>
        </div>
     </div>
 </div>
-
+</main>
+</body>
