--- a/FrontEnd/src/app/componentes/experiencia/new-experiencia/new-experiencia.component.html
+++ b/FrontEnd/src/app/componentes/experiencia/new-experiencia/new-experiencia.component.html
@@ -1,19 +1,27 @@
+<body class="card mb-3">
+<main class="form-signin m-auto">
+  <img class="" src="/assets/logosPI/argprograma.png" alt="" id="logoLogin">
+  <h2 class="h3 mb-3 fw-normal text-start text-white" style="font-family: cursive;">Ingrese sus datos</h2>
+
 <div class="container">
   <div class="row">
     <div>
       <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
         <div class="form-group">
-          <label for="nombreE">Nombre de la empresa</label>
+          <label for="nombreE"  class="text-white">Nombre de la empresa</label>
           <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="nombreE" required>
         </div>
         <div class="form-group">
-          <label for="descripcionE">Descripcion de la tarea</label>
-          <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="descripcionE" required>
+          <label for="descripcionE"  class="text-white">Descripcion de la tarea</label>
+          <textarea  rows="5" type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="descripcionE" required></textarea>
         </div>
-        <button class="btn btn-primary">
-          Agregar experiencia
+        <br>
+        <button class="btn ov-btn-slide-close btn-primary" style="width: 100%;">
+          AGREGAR
         </button>
       </form>
     </div>
   </div>
 </div>
+</main>
+</body>
