--- a/FrontEnd/src/app/componentes/footer/footer.component.css
+++ b/FrontEnd/src/app/componentes/footer/footer.component.css
@@ -4,5 +4,5 @@ footer{
   display: flex;
   flex-direction: column;
   text-align: center;
-  box-shadow: 2px -2px 5px greenyellow;
+  box-shadow: 2px -2px 5px #0d6efd;
 }
