--- a/FrontEnd/src/app/componentes/hys/edit-skill.component.html
+++ b/FrontEnd/src/app/componentes/hys/edit-skill.component.html
@@ -1,19 +1,26 @@
+
+<body class="card mb-3">
+<main class="form-signin m-auto">
+  <img class="" src="/assets/logosPI/argprograma.png" alt="" id="logoLogin">
 <div class="container" *ngIf="skill">
   <div class="row">
-    <div>
+
       <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
         <div class="form-group">
-          <label for="nombre">Nombre de la Skill</label>
+          <label for="nombre" class="text-white">Nombre de la Skill</label>
           <input type="text" class="form-control" id="nombre" name="nombre" [(ngModel)]="skill.nombre" required>
         </div>
         <div class="form-group">
-          <label for="porcentaje">Ingrese el porcentaje</label>
+          <label for="porcentaje" class="text-white">Ingrese el porcentaje</label>
           <input type="text" class="form-control" id="porcentaje" name="porcentaje" [(ngModel)]="skill.porcentaje" required>
         </div>
-        <button class="btn btn-primary">
-          Actualizar
+        <br>
+        <button class="btn ov-btn-slide-close btn-primary" style="width: 100%;">
+          ACTUALIZAR
         </button>
       </form>
     </div>
   </div>
-</div>
+
+</main>
+</body>
