--- a/FrontEnd/src/app/componentes/hys/hys.component.html
+++ b/FrontEnd/src/app/componentes/hys/hys.component.html
@@ -1,42 +1,43 @@
+<div class="container py-4">
+   <div class="row">
 
-<div class="row">
+     <div class="text-center"><h1 style="font-family: cursive;">HARD & SOFT SKILLS</h1></div>
+      <div class="col-lg-2">
+        <button type="button" routerLink="/newskill" class="btn btn-outline-light me-2" *ngIf="isLogged">AGREGAR SKILLS</button>
+      </div>
 
-  <h1>Hard & Soft skills</h1>
-  <div class="col-lg-2">
-    <button type="button" routerLink="/newskill" class="btn btn-dark" *ngIf="isLogged">Nueva Skill</button>
-  </div>
+     <article class="postcard dark align-items-center">
+       <div class="text-center col-sm-4 col-md-4 col-lg-4 circulo" *ngFor="let skill of skill">
+         <circle-progress
+           [percent]="(skill.porcentaje)"
+           [radius]="90"
+           [imageSrc]="''"
+           [title]="(skill.nombre)"
+           [titleColor]="'#ffffff'"
+           [showTitle]="true"
+           [showImage]="false"
+           [imageHeight]="70"
+           [imageWidth]="70"
+           [showUnits]="false"
+           [showSubtitle]="false"
+           [outerStrokeWidth]="16"
+           [innerStrokeWidth]="2"
+           [outerStrokeColor]="'#0d6efd'"
+           [innerStrokeColor]="'#C7E596'"
+           [animation]="true"
+           [animationDuration]="600">
+         </circle-progress>
+         <h1 *ngIf="isLogged">
+           <h1 style="justify-items: flex-end;">
+               <button class="btn btn-outline-light me-2"  routerLink="/editskill/{{skill.id}}">
+                  <i class="bi bi-pencil-square"></i></button>
+           </h1>
 
-
-  <div class="text-center col-sm-4 col-md-4 col-lg-4 circulo" *ngFor="let skill of skill">
-    <circle-progress
-      [percent]="(skill.porcentaje)"
-      [radius]="90" [imageSrc]="''"
-      [title]="(skill.nombre)"
-      [titleColor]="'#212F3C'"
-      [showTitle]="true"
-      [showImage]="false"
-      [imageHeight]="70"
-      [imageWidth]="70"
-      [showUnits]="false"
-      [showSubtitle]="false"
-      [outerStrokeWidth]="16"
-      [innerStrokeWidth]="2"
-      [outerStrokeColor]="'#78C000'"
-      [innerStrokeColor]="'#C7E596'"
-      [animation]="true"
-      [animationDuration]="600">
-    </circle-progress>
-
-    <div>
-      <td *ngIf="isLogged">
-        <button class="btn btn-light" routerLink="/editskill/{{skill.id}}">
-          <i class="bi bi-pencil-fill"></i></button>
-      </td>
-      <td *ngIf="isLogged">
-        <button class="btn btn-danger" (click)="delete(skill.id)">
-          <i class="bi bi-trash-fill"></i></button>
-      </td>
-    </div>
-
-  </div>
+            <button class="btn btn-danger" (click)="delete(skill.id)">
+             <i class="bi bi-trash-fill"></i>
+            </button>
+        </h1>
+       </div>
+     </article>
+   </div>
 </div>
