--- a/FrontEnd/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/FrontEnd/src/app/componentes/acerca-de/acerca-de.component.html
@@ -2,7 +2,8 @@
 <div class="card text-bg-dark text-center mb-3">
   <div class="row g-0">
     <div class="col-md-4">
-      <img src={{persona.img}} class="img-fluid"  alt="..." id="perfil">
+      <img src="/assets/perfiluno.jpg" class="img-fluid"  alt="..." id="perfil">
+      <!--<img src="{{persona.img}}" class="img-fluid"  alt="..." id="perfil">-->
     </div>
     <div class="col-md-4 ">
       <div class="card-body" id="nombre" >
